log
Fri Mar 26 11:46:29 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:9: error: expected identifier before ‘.’ token
   list->.head = NULL;
         ^
Compilation failed
Fri Mar 26 11:46:37 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6ffed88
Fri Mar 26 11:54:59 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f0edeec
Fri Mar 26 11:55:33 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
92b081a
